# Knowledge-Book

./: .gitignore  README.md  bayes-theorem-and-probability-foundations.md  convolutions-and-parameters-in-cnn.md  decision-trees.md  deep-reinforcement-learning.md  diffusion-models.md  embeddings-and-embedding-matrix.md  ensemble-methods-model-combination.md  gaussian-distribution.md  generative-adversarial-networks-gans.md  how-models-predict-confidence-and-calibration.md  hyperparameter-tuning.md  low-rank-adaptation-lora.md  non-maximum-suppression-nms.md  normalization-layers-batchnorm-layernorm.md  pyproject.toml  retrieval-augmented-generation-rag.md  roc-curve-and-roc-auc.md  support-vector-machines-svm-and-kernel-trick.md  tokenization-and-text-compression-in-llms.md  transformers-attention-and-vision-transformers-vit.md  unscented-kalman-filter-and-tracking.md  variational-autoencoders-vaes.md  vision-based-robot-training-methods.md  vision-language-action-models-vla.md
.cursor/: hooks.json
.cursor/hooks/: knowledge-book-validate.sh
.cursor/rules/: knowledge-book-consistency.mdc  python-topic-scripts.mdc  tutor.mdc  youtube-transcript-to-knowledge-book.mdc
scripts/: __init__.py  kb_validate_links.py  verify_youtube_transcript.py  youtube_fetch_transcript.py
scripts/viz/: gif_to_mp4.py  mp4_to_gif.py
tests/: conftest.py  test_kb_validate_links.py  test_manim_topic_scenes.py  test_verify_youtube_transcript.py  test_youtube_fetch_transcript.py
topics/action-recognition-and-object-tracking-metrics/: README.md
topics/decision-trees/: README.md
(+46 files in other folders)
