[project]
name = "knowledge-book"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch",
    "torchvision",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]
torchvision = [{ index = "pytorch-cpu" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.7",
]
viz = [
    "manim>=0.18.0",
    "imageio>=2.34",
    "imageio-ffmpeg>=0.4.9",
]

[tool.pytest.ini_options]
markers = [
    "manim: requires manim, cairo/pango, ffmpeg (use: uv sync --group viz)",
]
